syntax="proto3";
package dataFormat;

option go_package = "";
import "google/protobuf/any.proto";

message Messages{
  repeated Message message = 1;
}

message Message {
  string Type = 1;
  int64 Totalfeatures = 2;
  repeated Features features = 3;
  Crs crs = 4;
}

message Features {
  string Type = 1;
  string ID = 2;
  Geometry geometry = 3;
  string GeometryName = 4;
  repeated Properties properties = 5;
}

message Geometry {
  string Type = 1;
  repeated double Coordinates = 2;
}

message Properties {
  int64 Objectid = 1;
  string Krankenhausbez = 2;
  string Bezeichnung = 3;
  string Weblink1 = 5;
  string Adresse  = 6;
  int32 Bezirk = 7;
  string Telefon = 8;
  google.protobuf.Any SeAnnoCadData = 13;
}

message Crs{
  string Type = 1;
  CrsProperties crsproperties = 2;
}

message CrsProperties {
  string Name = 1;
}
